added responsiveness for screen size

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -150,18 +150,26 @@
   },
   "dependencies": {
     "@eeacms/volto-accordion-block": "^3.0.0",
+    "@eeacms/volto-block-divider": "^2.0.0",
     "@eeacms/volto-columns-block": "^4.0.0",
     "@eeacms/volto-pdf-block": "^1.0.0",
+    "@eeacms/volto-tabs-block": "2.2.0",
+    "@fortawesome/fontawesome-svg-core": "6.2.0",
+    "@fortawesome/free-regular-svg-icons": "6.2.0",
+    "@fortawesome/free-solid-svg-icons": "6.2.0",
+    "@fortawesome/react-fontawesome": "0.2.0",
     "@kitconcept/volto-button-block": "*",
+    "@kitconcept/volto-carousel-block": "1.0.0",
+    "@kitconcept/volto-heading-block": "2.1.2",
     "@kitconcept/volto-slider-block": "*",
     "@kitconcept/volto-text-with-background-color-block": "*",
     "@plone/volto": "15.15.0",
+    "bootstrap": "5.2.2",
     "react-dropdown": "1.11.0",
     "react-icons": "4.4.0",
     "react-slick": "0.29.0",
     "slick-carousel": "1.8.1",
-    "volto-slate": "*",
-    "@eeacms/volto-block-divider": "^2.0.0"
+    "volto-slate": "*"
   },
   "devDependencies": {
     "@storybook/addon-actions": "^6.3.0",
